# warthog

./: README.md  requirements.txt  sensor_integration_report.tex  warthog_controller_report.tex
log/: latest_list
warthog_control/: CMakeLists.txt  package.xml
warthog_control/config/: control_ros2.yaml
warthog_control/launch/: control.launch.py  display.launch.py  teleop.launch.py  test_robot.launch.py
warthog_controller/: package.xml  setup.cfg  setup.py
warthog_controller/warthog_controller/: calibrated_lidar_tf.py  camera_frame_transformer.py  cmd_pub.py  icp_calibration.py  map_comparison.py
warthog_description/: CMakeLists.txt  model.config  package.xml
warthog_description/config/: config.rviz  homework_outdoor.rviz
warthog_description/launch/: description.launch.py
warthog_description/urdf/: accessories.urdf.xacro  warthog.gazebo
warthog_description/urdf/accessories/: lidar_3d.urdf.xacro  rgbd_camera.urdf.xacro
warthog_gazebo/: CMakeLists.txt  package.xml
warthog_gazebo/config/: bridge.yaml
warthog_gazebo/launch/: empty_world.launch.py  outdoor_homework.launch.py  rtabmap_mapping.launch.py  spawn_warthog.launch.py
warthog_gazebo/models/grass_plane/: model.config
warthog_gazebo/models/vrc_heightmap_1/: model.config
warthog_gazebo/scripts/: odom_to_tf.py
warthog_gazebo/src/: warthog_suspension_plugin.cpp
warthog_gazebo/worlds/: empty.sdf  outdoor.sdf
warthog_msgs/: CMakeLists.txt  package.xml
