<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>warthog_gazebo</name>
  <version>0.2.2</version>
  <description>Launchfiles to use Warthog in Gazebo.</description>

  <maintainer email="tbaltovski@clearpathrobotics.com">Tony Baltovski</maintainer>
  <author>Ryan Gariepy</author>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/warthog_gazebo</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_image</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>warthog_control</exec_depend>
  <exec_depend>warthog_description</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
